feat: 智能格式检测，解决QQNT图片后缀混乱问题
- 新增智能格式检测功能，自动识别图片实际格式，兼容QQNT导致的文件后缀异常
- 升级项目版本号到1.1.0

--- a/EmojiManager.csproj
+++ b/EmojiManager.csproj
@@ -11,10 +11,13 @@
     <RootNamespace>EmojiManager</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3240.44" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3296.44" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
